[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/main_scene.gd" type="Script" id=1]
[ext_resource path="res://assets/brush_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/fill_icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/tool_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/canvas.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/pixel_frame_hover.png" type="Texture" id=6]

[node name="main_scene" type="Control"]
pause_mode = 2
script = ExtResource( 1 )
ui_bg = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="right_side" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="right_side"]
margin_left = 620.0
margin_right = 1050.0
margin_bottom = 600.0
color = Color( 0.117647, 0.109804, 0.184314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="eyedrop" type="ColorRect" parent="right_side"]
margin_left = 636.0
margin_top = 204.0
margin_right = 686.0
margin_bottom = 254.0
color = Color( 0.117647, 0.109804, 0.184314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="right_side/eyedrop"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 6 )
expand = true

[node name="ColorPicker" type="ColorPicker" parent="right_side"]
pause_mode = 1
margin_left = 720.0
margin_top = 60.0
margin_right = 1035.0
margin_bottom = 522.0
hsv_mode = true

[node name="save" type="Button" parent="right_side"]
pause_mode = 1
margin_left = 699.0
margin_top = 541.0
margin_right = 849.0
margin_bottom = 595.0
text = "Save"

[node name="export" type="Button" parent="right_side"]
pause_mode = 1
margin_left = 860.0
margin_top = 539.0
margin_right = 1010.0
margin_bottom = 594.0
text = "Export"

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="middle" type="Viewport" parent="ViewportContainer"]
size = Vector2( 620, 600 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/middle"]
current = true

[node name="canvas" parent="ViewportContainer/middle" instance=ExtResource( 5 )]
zoom_start_point = Vector2( 32, 0 )
zoom_end_point = Vector2( 652, 600 )
canvas_frame_start = Vector2( 32, 0 )
canvas_frame_end = Vector2( 620, 600 )

[node name="tool_bar" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="tool_bar"]
margin_right = 32.0
margin_bottom = 600.0
color = Color( 0.117647, 0.109804, 0.184314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="tool_container" type="VBoxContainer" parent="tool_bar"]
margin_right = 32.0
margin_bottom = 68.0

[node name="brush" parent="tool_bar/tool_container" instance=ExtResource( 4 )]
texture_normal = ExtResource( 2 )

[node name="fill" parent="tool_bar/tool_container" instance=ExtResource( 4 )]
margin_top = 36.0
margin_bottom = 68.0
texture_normal = ExtResource( 3 )

[node name="popups" type="Node" parent="."]

[node name="save_dialog" type="FileDialog" parent="popups"]
margin_left = 253.0
margin_top = 129.0
margin_right = 690.0
margin_bottom = 384.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Save file"
access = 2

[node name="export_dialog" type="FileDialog" parent="popups"]
margin_left = 253.0
margin_top = 129.0
margin_right = 690.0
margin_bottom = 384.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Export image"
access = 2

[connection signal="pressed" from="right_side/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="right_side/export" to="." method="_on_export_pressed"]
[connection signal="file_selected" from="popups/save_dialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="visibility_changed" from="popups/save_dialog" to="." method="_on_save_dialog_visibility_changed"]
[connection signal="file_selected" from="popups/export_dialog" to="." method="_on_export_dialog_file_selected"]
[connection signal="visibility_changed" from="popups/export_dialog" to="." method="_on_export_dialog_visibility_changed"]
